# gis-bootcamp

./: .dockerignore  .gitignore  CAPSTONE_SUMMARY.md  Dockerfile  IMPLEMENT.md  PROGRESS.md  README.md  docker-compose.yml  geometry_inspector  pyproject.toml  pyproject.toml.cfg
gis_bootcamp/: __init__.py  __main__.py  batch_geocoder.py  density_analysis.py  enrichment_pipeline.py  geometry_inspector.py  geometry_validation.py  geospatial_etl.py  geotiff_to_cog.py  gis_data_quality.py  gis_linter.py  map_renderer.py  nearest_feature_lookup.py  postgis_client.py  raster_clipper.py  raster_metadata_inspector.py  raster_mosaic.py  raster_pipeline.py  routing_distance_client.py  spatial_api.py  spatial_join.py  spatial_qa.py  tile_clip_service.py  vector_etl_pipeline.py  vector_geoprocessing.py  vector_reprojection.py  vector_to_geoparquet.py
output/: cities_in_countries.geojson  cities_in_countries.gpkg  cleaned_drop.gpkg  cleaned_geometries.gpkg  clipped_bbox.tif  mosaic_ns.tif  north_half.tif  test_dem_cog.tif
tests/: test_batch_geocoder.py  test_density_analysis.py  test_docker.py  test_enrichment_pipeline.py  test_geometry_inspector.py  test_geometry_validation.py  test_geospatial_etl.py  test_geotiff_to_cog.py  test_gis_data_quality.py  test_gis_linter.py  test_map_renderer.py  test_nearest_feature_lookup.py  test_postgis_client.py  test_raster_clipper.py  test_raster_metadata_inspector.py  test_raster_mosaic.py  test_raster_pipeline.py  test_routing_distance_client.py  test_spatial_api.py  test_spatial_join.py  test_spatial_qa.py  test_tile_clip_service.py  (+4 more)
